<resources>
    <string name="version">.9</string>
    <string name="build">101</string>
    <string name="app_id">314938401925933</string>
    <string name="admob_pub_id_main_landing">a150e5e3748e238</string>
    <string name="admob_pub_id_interstitial">a150e6e3f4832b4</string>
    <string name="admob_pub_id_badges">a150e7b31dd0858</string>
    <string name="admob_pub_id_full_rules">a150e7b398d7ec4</string>
    <string name="admob_pub_id_condensed_rules">a150e7b4dc8b49f</string>
    <string name="admob_pub_id_game_played_words">a150e7b549b5cb3</string>
    <string name="admob_pub_id_game_word_definition">a15124d73407724</string>
    <string name="admob_pub_id_options">a150e7b841d7e88</string>
    <string name="gcm_sender_id">505875093616</string>
    <string name="wordnik_apiKey">48f31f368d20791114b01067e1d05b68ca177aabdbab4150b</string>
    <string name="chartboost_app_id">5126a10716ba477b0e000019</string>
    <string name="chartboost_app_signature">cc41971b1b681903b94c7c666f88d83d7da43762</string>
    <string name="rev_mob_app_id">5128d7dbffe6c2180000000b</string>
    <string name="rev_mob_main_landing_banner">5128d84decad1a100000003c</string>
    <string name="rev_mob_main_between_play">5128d816f95d861800000069</string>
    <string name="rev_mob_main_landing_banner_">5128d816f95d861800000069</string>
    <string name="rev_mob_main_landing_banner__">5128d816f95d861800000069</string>
    <string name="playtomics_guid">677d2619c62640b5</string>
	<string name="playtomics_api_key">c77086d28be34cdaa1f3db380fb381</string>
    <string name="app_name">WordSmash</string>
    <string name="anonymous_player_name">You</string>
    <string name="join_via_facebook">connect with facebook</string>
	<string name="join_via_native">connect with your email address</string>
	<string name="join_title">Join WordSmash to get started</string>
	<string name="logo">logo</string>
	<string name="enter_email">enter email</string>
	<string name="enter_password">enter password</string>
	<string name="enter_new_password">enter new password</string>
	<string name="enter_confirm_password">confirm your password</string>
	<string name="account_settings_change_password">change password</string>
	<string name="enter_nickname">enter nickname</string>
	<string name="email">email address</string>
	<string name="nickname">nickname</string>
	<string name="password">password</string>
	<string name="change_password">change your password</string>
	<string name="save">save</string>
	<string name="connect">connect</string>
	<string name="send">send</string>
	<string name="back">back</string>
	<string name="badges">badges</string>
	<string name="settings">settings</string>
	<string name="account_settings">account settings</string>
	<string name="fb_account_settings">manage your nickname</string>
	<string name="options_profile_image">your profile image</string>
	<string name="options">options</string>
	<string name="logout">logout</string>
	<string name="rules">game rules</string>
	<string name="create_game">start a game</string>
	<string name="success">success!</string>
	<string name="try_again">Try Again</string>
	<string name="second">second</string>
	<string name="seconds">seconds</string>
	<string name="minute">minute</string>
	<string name="minutes">minutes</string>
	<string name="hour">hour</string>
	<string name="hours">hours</string>
	<string name="day">day</string>
	<string name="days">days</string>
	<string name="cancel">cancel</string>
	<string name="header_1_win">1 win</string>
	<string name="header_num_wins">%s wins</string>
	<string name="line_item_invited">invited, but not registered yet</string>
	<string name="line_item_1_win">1 win</string>
	<string name="line_item_num_wins">%s wins</string>
	<string name="never_share_email">(will never be shared, not ever)</string>
	<string name="msg_no_local_player">WordSmash cannot find the player Id that should be stored on this device.</string>
	<string name="msg_no_local_player_token">WordSmash cannot find the complete player Id that should be stored on this device.</string>
	<string name="msg_not_connected">WordSmash cannot find a network connection. To work properly, WordSmash has to talk to the mother ship.</string>
	<string name="msg_connection_timeout">The network connection took too long to return. To work properly, WordSmash has to talk to the mother ship.</string>
	<string name="validation_max_games_reached">You\'ve reached the maximum number of active games.</string>
	<string name="validation_email_required">Please enter your email to connect to play.  Never fear, it will not be shared.</string>
	<string name="validation_nickname_required">Please enter your nickname.  This will be the name to other players see.</string>
	<string name="validation_nickname_invalid">Your nickname can only contain letters, numbers, spaces, dots, and hyphens.</string>
	<string name="validation_password_required">Please enter a password.</string>
	<string name="validation_auth_token_required">Auth token is required.</string>
	<string name="validation_email_invalid">Please enter a valid email to connect to play.  We\'ll never share it, we just may send game-related emails out every now and then.  Did we mention we\'ll never share it?</string>
	<string name="validation_nickname_required_for_search">Please enter the nickname of the opponent you are trying to find.</string>
	<string name="validation_too_many_players">Sorry, a maximum of four players can be added to a game.</string>
	<string name="validation_incorrect_context_player">Sorry, only the logged in user can start a game.</string>
	<string name="validation_nickname_already_taken">This nickname is already in use by another player.</string>
	<string name="validation_email_already_taken">This email is already in use by another player.</string>
	<string name="validation_email_not_supplied">Please enter an email address.</string>
	<string name="validation_incorrect_password">The password is incorrect.</string>
	<string name="validation_email_connected_via_fb">This email has already been connected via Facebook.  Please choose another email address or connect with Facebook.</string>
	<string name="validation_unspecified_error">The error could not be determined.  Please try again later.</string>
	<string name="validation_404_error">The server could not be found.  Please try again later.</string>
	<string name="validation_token_not_found">The auth token could not be found.</string>
	<string name="validation_new_password_not_provided">Please enter the new password.</string>
	<string name="validation_password_too_short">Please enter a password that is at least 4 characters long.</string>
	<string name="validation_password_confirmation_failed">Please reconfirm your new password.</string>
	<string name="validation_unauthorized">This action is unauthorized.</string>
	<string name="validation_nickname_not_supplied">Please enter a nickname.</string>
	<string name="validation_email_is_already_in_use">The email associated with your Facebook account has already been registered in WordSmash.</string>
	<string name="validation_cannot_add_yourself">You cannot add yourself as an opponent.</string>
	<string name="validation_opponent_already_added">%s has already been added as an opponent.</string>
	<string name="validation_must_have_between_2_and_4_players">The game must have either 2, 3, or 4 players.</string>
	<string name="go_to_store">go to store</string>
	<string name="no_thanks">no thanks</string>
	<string name="ok">ok</string>
	<string name="thank_you">thank you</string>
	<string name="yes">yes</string>
	<string name="no">no</string>
	<string name="oops">Oops</string>
	<string name="facebook">facebook</string>
	<string name="sorry">Sorry</string>
	<string name="game_over">game over</string>
	<string name="error_title">Holy Gandalf!!</string>
	<string name="error_message">Unfortunately, something messy happened down in the bowels of the code. Not to worry, we will get it fixed.  In the meantime, you might want to restart WordSmash.</string>
	<string name="welcome_message">welcome to WordSmash</string>
	<string name="welcome_sub_message">come on in&#8230;competition is waiting!!</string>
	<string name="response_in_error">Something funky happened when communicating with the mother ship.</string>
	<string name="join_with_email_title">connect with your email</string>
 	<string name="join_with_email_subtitle">and choose a nickname</string>
 	<string name="start_game">start a game</string>
 	<string name="start_game_sub">choose up to 3 opponents</string>
 	<string name="start_game_fb_friends">choose from facebook friends</string>
 	<string name="start_game_prev_opponents">choose from previous opponents</string>
 	<string name="start_game_by_nickname">find opponent by nickname</string>
 	<string name="start_game_by_random">add a random opponent</string>
 	<string name="progress_looking_up">looking up&#8230;</string>
 	<string name="progress_loading">loading&#8230;</string>
 	<string name="progress_sending">sending&#8230;</string>
 	<string name="progress_saving">saving&#8230;</string>
 	<string name="progress_checking">checking&#8230;</string>
 	<string name="progress_searching">searching&#8230;</string>
 	<string name="progress_connecting">connecting&#8230;</string>
 	<string name="progress_cancelling">cancelling&#8230;</string>
 	<string name="progress_logging_out">logging out&#8230;</string>
 	<string name="progress_syncing">syncing&#8230;</string>
 	<string name="progress_updating">updating&#8230;</string>
 	<string name="progress_starting_game">starting game&#8230;</string>
 	<string name="quick_rules_title">condensed game rules</string>
 	<string name="quick_rules_subtitle">enough to get you off and running</string>
  	<string name="quick_rules_1">To start the game, a letter of the first word must be placed on at least one of the smiley faces.</string>
  	<string name="quick_rules_2">Then take turns forming valid words by dragging letters from your tray to the board. At least one of your placed letters must connect to (or be placed on top of) letters already placed on the board in previous turns.</string>
 	<string name="quick_rules_3">During a turn, be sure to place all of your letters in a single line, either vertically or horizontally.</string>
 	<string name="quick_rules_4">If it\'s your turn, you can also skip the turn or swap letters.</string>
 	<string name="quick_rules_5">Keep it up until all the letters are used.  The player with the highest score wins.</string>
 	<string name="full_rules_option">full game rules</string>
 	<string name="about_option">about WordSmash</string>
 	<string name="full_rules_title">full set of rules</string>
 	<string name="full_rules_subtitle">all the details</string>
 	<string name="full_rules_1">The idea is to score more points than your opponent (or opponents) by forming valid words out of the letters in your tray. 
                   Letters must be placed on the board in a single axis, either horizontally or vertically.  As you win more games, 
                   you\'ll earn new badges.</string>
 	<string name="gameboard_recall_button_text">recall</string>
 	<string name="gameboard_shuffle_button_text">shuffle</string>
 	<string name="gameboard_play_button_text">play</string>
 	<string name="gameboard_resign_button_text">concede</string>
 	<string name="gameboard_skip_button_text">skip</string>
 	<string name="gameboard_cancel_button_text">cancel</string>
 	<string name="gameboard_played_words_button_text">look up\nwords</string>
 	<string name="gameboard_hopper_peek_button_text">peek at\nhopper</string>
 	<string name="gameboard_swap_button_text">swap</string>
    	<string name="game_play_words_confirmation_text">are you sure?</string>
		<string name="game_lookup_title">word definition</string>
</resources>