<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/progress_root"
    style="@style/DialogStyle"
    android:background="@drawable/dialog_background"
	>
 <RelativeLayout  
	style="@style/DialogInnerStyle"
    android:id="@+id/alert_top"
	>
	
    <RelativeLayout
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/alert_background"
		android:id="@+id/header"
	>
    <TextView
         android:id="@+id/alert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		style="@style/TextStyle"
        android:layout_centerHorizontal="true"
		android:layout_marginTop="10dp"
    />
   <ImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/close_button"
        android:layout_alignParentRight="true"
        android:paddingRight="3dp"
        android:paddingTop="3dp"
		/>
    <LinearLayout
      	android:id="@+id/llHints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
 	/>
     <RelativeLayout  
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/alert_text"
    >
	     <LinearLayout
	        style="@style/FormButtonAreaStyle"
	 
 			android:id="@+id/llOK"
 		   android:gravity="center"
	        >
 
		<TextView
		  
		        android:id="@+id/tvOK"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
				style="@style/TextStyle"
				android:gravity="center"
				android:text="@string/ok"
				android:textSize="20sp"
				android:textColor="@color/sub_text_color"
			 
		    />
		<Button 
	  	    style="@style/ButtonStyle"
	  	    android:id="@+id/bStore"
	        android:layout_width="120dp" 
	       
	        android:text="@string/go_to_store"
	    />
		<Button 
	  	    style="@style/ButtonStyle"
	  	    android:id="@+id/bNoThanks"
	        android:layout_width="120dp" 
	        android:layout_marginLeft="4dp"
	        android:text="@string/no_thanks"
	    />
		
	    </LinearLayout>
    </RelativeLayout>
  </RelativeLayout>
   </RelativeLayout>
 </LinearLayout>
