<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/progress_root"
    style="@style/DialogStyle"
    android:background="@drawable/dialog_background"
	>
 <RelativeLayout  
	style="@style/DialogInnerStyle"
    android:id="@+id/alert_top"
	>
	
    <RelativeLayout
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/alert_background"
		android:id="@+id/header"
	>
    <TextView
         android:id="@+id/alert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		style="@style/TextStyle"
        android:layout_centerHorizontal="true"
		android:layout_marginTop="10dp"
    />
   <ImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/close_button"
        android:layout_alignParentRight="true"
        android:paddingRight="3dp"
        android:paddingTop="3dp"
		/>
    <TextView
        style="@style/TextStyle"
     	android:id="@+id/alert_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingLeft="20.0dip"
        android:paddingRight="20.0dip"
        android:layout_below="@id/alert_title"
 		android:layout_marginTop="10dp"  
 		android:layout_marginBottom="10dp"  
 		
 	/>
     <TextView
        style="@style/TextStyle"
     	android:id="@+id/alert_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        
        android:layout_below="@id/alert_text" 
 		android:layout_marginBottom="10dp"  
 		android:text="@string/game_play_words_confirmation_text"
 	/>
     <RelativeLayout  
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/alert_confirmation"
    >
	    <LinearLayout
	        style="@style/FormButtonAreaStyle"
	         
	        >
		 
		<Button 
	  	    style="@style/ButtonStyle"
	  	    android:id="@+id/bOK"
	        android:layout_width="0dp" 
	        android:layout_weight="1.0"
	        android:text="@string/ok"
	    />
	    <Button 
	  	    style="@style/ButtonStyle"
	  	    android:id="@+id/bCancel"
	        android:layout_width="0dp" 
	        android:layout_weight="1.0"
	        android:text="@string/cancel"
	    />
	    </LinearLayout>
    </RelativeLayout>
  </RelativeLayout>
   </RelativeLayout>
 </LinearLayout>
