<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
	android:padding="2dp"
 android:layout_marginLeft="10dp"
  android:layout_marginRight="10dp"
  android:layout_marginBottom="40dp"
    android:id="@+id/progress_root"
    style="@style/DialogStyle"
    android:background="@drawable/dialog_background"
	>
 <RelativeLayout  
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/progress_inner_background"
    android:id="@+id/alert_top"
 	
	>
	
    <RelativeLayout
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		
		android:background="@drawable/alert_background"
		android:id="@+id/header_wrapper"
	>
	 <RelativeLayout
 		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	 	android:id="@+id/header"
	>
    <com.riotapps.word.ui.MainFontTextView
         android:id="@+id/tvWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		style="@style/TextStyle"
		 
		android:textSize="14dp"
        android:layout_centerHorizontal="true"
		android:layout_marginTop="10dp"
    />
   <ImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/close_button"
        android:layout_alignParentRight="true"
        android:paddingRight="3dp"
        android:paddingTop="3dp"
		/>
  </RelativeLayout>
  
 
	 			 
	 			    <ImageView 
					   	android:layout_width="wrap_content"
				   		android:layout_height="wrap_content"
					    android:id="@+id/ivWordnik"	
					    android:src="@drawable/wordnik_badge_a1"
					    android:layout_alignParentRight="true"
					 />
	 			      <com.riotapps.word.ui.MainFontTextView 
					     style="@style/TextStyle"
					     android:textSize="16sp"
					  	 android:id="@+id/tvPreviewMessage"
					     android:layout_width="fill_parent"
					     android:layout_height="wrap_content"
				 
					     android:layout_marginBottom="5dp"
					     
					     />
	 				  <com.riotapps.word.ui.MainFontTextView 
					     style="@style/TextStyle"
					     android:textSize="16dp"
					  	 android:id="@+id/tvNotFound"
					     android:layout_width="fill_parent"
					     android:layout_height="wrap_content"
					  
					     
					     />	 
		    		  <ScrollView   
				     
				    	android:layout_width="fill_parent"
				    	android:layout_height="fill_parent" 
				    	android:fadingEdge="none"
				    	 >
				   
				    	 <LinearLayout
						    android:layout_width="fill_parent"
				    		android:layout_height="wrap_content" 
				    		android:orientation="vertical"
				    		android:id="@+id/llDefs"
						    > 
						    
				    	   </LinearLayout>  
		    		  </ScrollView>

	 
	 
</RelativeLayout>   
  
	    <LinearLayout
	        style="@style/FormButtonAreaStyle"
	        android:layout_below="@+id/header_wrapper" 
 			android:id="@+id/llOK"
 		   android:gravity="center"
	        >
 
		<com.riotapps.word.ui.MainFontTextView
		  
		        android:id="@+id/tvOK"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
				style="@style/TextStyle"
				android:gravity="center"
				android:text="@string/ok"
				android:textSize="20sp"
				android:textColor="@color/sub_text_color"
			 
		    />
		<com.riotapps.word.utils.TypefaceButton 
	  	    style="@style/ButtonStyle"
	  	    android:id="@+id/bStore"
	        android:layout_width="150dp" 
	       
	        android:text="@string/go_to_store"
	    />
		<com.riotapps.word.utils.TypefaceButton 
	  	    style="@style/ButtonStyle"
	  	    android:id="@+id/bNoThanks"
	        android:layout_width="150dp" 
	        android:layout_marginLeft="4dp"
	        android:text="@string/no_thanks"
	    />
		
	    </LinearLayout>
    
  </RelativeLayout>
</RelativeLayout>
  
